# NewsGeoRisk

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  report-checker.md  results-summarizer.md
.claude/skills/mistral-pdf-to-markdown/: reference.md
.claude/skills/mistral-pdf-to-markdown/scripts/: convert_pdf_to_markdown.py
.claude/skills/work-summary/: SKILL.md
Python/measure/: 001_filter_macro_and_cnen_news.py  002_embed_headlines_and_match.py  003_clean_match_headlines.py  004_check_macro_sentence_classify.py  005_construct_measure.py  config.py
Python/measure/utility/filters/: consolidated_suffix_manually_labelled.csv  subject_code_manually_labelled.csv  subject_code_manually_labelled_miscellaneous.csv
Python/measure/utility/functions/: construct_raw_df.py  observer_functions.py
Python/measure/utility/parameters/: parameters.py
R/: Step1_Build_Tension_Flow_Panel.R  Step2_Tension_Flow_Descriptives.R  Step2_Tension_Flow_Results.Rmd  config.R
